# msu

MSU/: ~$U Implementation Guide_V1.0.docx
MSU/Desing Doc/: MSU_State_Machine.eap  Technical Specification-MSU (Autosaved).doc  Technical Specification-MSU (Autosaved).docx  Technical Specification-MSU.doc  ~WRL0001.tmp
MSU/MSU Two Tier Architecture/: MSU two tier Architecture Use case.docx  Netwrok @Tier Arch.vsdx
MSU/MSU Two Tier Architecture/MSU Master Spec/: MSU Master DOc.docx
MSU/MSU Two Tier Architecture/TwoTier MSU Application/: PriArtSearchReport.xlsx
MSU/Mis_Doc/: Comparative Analysis of MSU V3.0.xlsx  M80 Massive Firmware  Upgrade PS  - V01.doc  MSU - The Proposal.ppt  MSU Deployment_Detail_Tech.ppt  MSU Implementation Guide_V1.0.docx  MSU Protocol Spec V1.0.docx  MoM for MSU Deployment on MidRange Platform.docx  ~$M for MSU Deployment on MidRange Platform.docx  ~WRL2280.tmp
MSU/Mis_Doc/CSP/: CSP_UseCase.txt  MSU Deployment_For_CSP_Application.ppt  (+2 more)
MSU/Patent Doc/: Patent Application For MSU.doc
MSU/Presentation/: MSU Deployment_Detail_Tech_MidRange.ppt
MSU/Project/: MSUClientAppBacklog.xlsx  Mass Software Upgrade (MSU)_OPEN PSC Report.ppt  PROJECT Estimate Notebook -MSU.xls  Quality Plan - MSU.doc  Sequence_Diagram.vsdx  ~$$Sequence_Diagram.~vsdx
MSU/Project/MidRange_Linux/MSU_MidRange/MSU/: CMakeLists.txt  MSU.mk  MSU.project
MSU/SpecificationRelease/: MSU Message FormatV4.0.xls  MSU Protocol Spec V0.9_First CC Base Line.docx  MSU Protocol Spec V1.0 - Copy.docx  MSU Protocol Spec V1.0.docx  ~$U Protocol Spec V4.1.docx
(+117 files in other folders)
